# IFC-Quality-Intelligence-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
apps/: dashboard.py  portfolio_dashboard.py
config/: default.yaml
examples/: example_batch_processing.py  example_dashboard.py  example_geometry_extraction.py  example_load_ifc.py  example_ml_anomaly_detection.py  example_quality_checks.py
src/ifcqi/: __init__.py  batch.py  checks.py  config.py  features.py  geometry.py  ifc_loader.py  logger.py  metrics.py  viz.py
src/ifcqi/api/: __init__.py
src/ifcqi/ml/: __init__.py  anomaly_detection.py  preprocessing.py
tests/: __init__.py  test_checks.py  test_ifc_loader.py  test_metrics.py  test_ml.py  test_viz.py
